--- a/index.html
+++ b/index.html
@@ -19,19 +19,11 @@
         }
         pre.container {
             font-family: monospace;
-            color: #fff;
+            color: #bbb;
             background-color: #000;
             margin-left: auto;
             margin-right: auto;
             margin-top: 25%;
-        }
-        footer.footer {
-            grid-row-start: 2;
-            grid-row-end: 3;
-            background-color: #fff;
-            color: #000;
-            text-align: center;
-            padding: 10px;
         }
     </style>
 </head>
