--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         }
         pre.container {
             font-family: monospace;
-            color: #bbb;
+            color: #fff;
             background-color: #000;
             margin-left: auto;
             margin-right: auto;
